fix: Prevent autozoom on iOS

--- a/app/globals.css
+++ b/app/globals.css
@@ -45,3 +45,22 @@ body {
   -ms-overflow-style: none; /* Hides scrollbar in Internet Explorer and Edge */
   scrollbar-width: none; /* Hides scrollbar in Firefox */
 }
+
+input[type="color"],
+input[type="date"],
+input[type="datetime"],
+input[type="datetime-local"],
+input[type="email"],
+input[type="month"],
+input[type="number"],
+input[type="password"],
+input[type="search"],
+input[type="tel"],
+input[type="text"],
+input[type="time"],
+input[type="url"],
+input[type="week"],
+select:focus,
+textarea {
+  font-size: 16px;
+}
